--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "license": "ISC",
   "author": "bszhct",
   "dependencies": {
-    "@bszhct/template-base": "0.0.1",
+    "@bszhct/template-base": "^0.0.2",
     "@reach/router": "1.2.1",
     "axios": "0.19.0",
     "mobx": "4.14.1",
@@ -33,8 +33,8 @@
     "react-dom": "16.11.0"
   },
   "devDependencies": {
-    "@bszhct/template-eslint": "0.0.2",
-    "@bszhct/template-webpack": "0.0.8",
+    "@bszhct/template-eslint": "^0.0.2",
+    "@bszhct/template-webpack": "^0.0.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "mobx-react-devtools": "6.1.1"
